package vue;

import modele.Sujet;

public interface Observateur {

    public void actualiser(Sujet s);

}
