@startuml
'https://plantuml.com/sequence-diagram

interface FabriqueTache{
    fab(String, String, int): Tache
}

class FabriqueSousTache implements FabriqueTache{
    fab(String, String, int): Tache
}

class FabriqueTachePrimaire implements FabriqueTache{
    fab(String, String, int): Tache
    {static} personnaliser(TachePrimaire, Date, Date): TachePrimaire
}

interface Observateur{
    actualiser(Sujet): void
}

class VueBureau extends Hbox implements Observateur{
    colToDo : VBox
    colInProgress : VBox
    colTesting : VBox
    colDone : VBox

    initialiserColonne(): void
    activerDragDropDesColonnes(): void
    creerColonne(String, String): VBox
    actualiser(Sujet): void
    rafraichirTache(Modele): void
    creerCarteTache(TachePrimaire): Label
    viderContenuColonne(VBox): void
    getColToDo(): Vbox
    getColInProgress(): Vbox
    getColTesting(): Vbox
    getColDone(): Vbox
}

class VueHistorique extends TextArea implements Observateur{
    texte: String
    actualiser(Sujet): void
    ajouterLog(String): void
}

class VueListe extends VBox implements Observateur{
    root: TreeItem<Tache>
    treeView: TreeView<Tache>
    btnAjouterTache: Button
    btnAjouterSousTache: Button
    btnSupprimer: Button

    buildVl(): void
    actualiser(Sujet): void
}

class ControlAddSousTache{
        - parent : TachePrimaire
        - champNom : TextField
        - champDescription : TextArea
        - champDuree : TextField
        - fenetre : Stage

        + handle(ActionEvent): void
}

class ControlAddTache{
        - champNom : TextField
        - champDescription : TextArea
        - champDuree : TextField
        - champDateEcheance : DatePicker
        - fenetre : Stage

        + handle(ActionEvent): void
}

class DragDropController{
    + makeDraggable(Label): void
    + makeDroppable(VBox, int): void
}





Modele"1" <--- "*"VueBureau : modele
Modele"1" <--- "*"VueHistorique : modele
Modele"1" <--- "*"VueListe : modele
Modele"1" <--- "*"ControlAddSousTache : modele
Modele"1" <--- "*"ControlAddTache : modele
Modele"1" <--- "*"DragDropController : modele
@enduml